php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44403 register_tick_function() does not check for a valid callback
Submitted: 2008-03-11 00:19 UTC Modified: 2008-06-30 11:42 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: kalle@php.net Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5.2.5 OS: Windows Vista
Private report: No CVE-ID: None
 [2008-03-11 00:19 UTC] kalle@php.net
Description:
------------
register_tick_function() does not check if the first parameter is a valid callback.

Reproduce code:
---------------
<?php
	register_tick_function('non_existing_function');
?>

Expected result:
----------------
Warning: 'non_existing_function' is not a valid callback in C:\webserver\webroot\program.php on line 2

... or something similar

Actual result:
--------------
No error issued

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-06-30 11:42 UTC] kalle@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.

Fixed in 5_3 by Iliaa
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 09 06:00:01 2026 UTC