Fixed a bug #44403 (register_tick_function() does not check for a valid callback)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@257967 c90b9560-bf6c-de11-be94-00142212c4b1